add separate button to save calibration in Accessibility Mode

--- a/eye_tracking_mouse/ui/AccessibilityHelperWindow.xaml
+++ b/eye_tracking_mouse/ui/AccessibilityHelperWindow.xaml
@@ -78,6 +78,7 @@
             </Canvas>
             <TextBlock Canvas.Left="14" Canvas.Top="24"><Run Foreground="Black" Text="EXIT:"/> <Run x:Name="TxtExit" Text="Escape"/> </TextBlock>
             <TextBlock Canvas.Left="14" Canvas.Top="50"><Run Foreground="Black" Text="Eye Tracking:"/> <Run x:Name="TxtModifier" Text="WIN"/></TextBlock>
+            <TextBlock Canvas.Left="14" Canvas.Top="76"><Run Foreground="Black" Text="Save Calibtation:"/> <Run x:Name="TxtSaveCalibration" Text="M"/></TextBlock>
 
             <!--Problem:
                     "Layout measurement override of element should not 
