--- a/eye_tracking_mouse/ui/Settings.xaml
+++ b/eye_tracking_mouse/ui/Settings.xaml
@@ -7,6 +7,9 @@
         xmlns:local="clr-namespace:eye_tracking_mouse"
         mc:Ignorable="d"
         Title="Settings" ResizeMode="NoResize" Height="360" Width="570" SizeToContent="WidthAndHeight">
+    <Window.Resources>
+        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+    </Window.Resources>
     <Grid>
         <TabControl x:Name="TabControl">
             <TabItem Header="Application">
@@ -48,11 +51,12 @@
                         <ColumnDefinition Width="auto"></ColumnDefinition>
                         <ColumnDefinition Width="auto"></ColumnDefinition>
                         <ColumnDefinition Width="auto"></ColumnDefinition>
-                        <ColumnDefinition Width="50"></ColumnDefinition>
+                        <ColumnDefinition Width="60"></ColumnDefinition>
                         <ColumnDefinition Width="auto"></ColumnDefinition>
                     </Grid.ColumnDefinitions>
 
                     <Grid.RowDefinitions>
+                        <RowDefinition Height="auto"></RowDefinition>
                         <RowDefinition Height="auto"></RowDefinition>
                         <RowDefinition Height="auto"></RowDefinition>
                         <RowDefinition Height="auto"></RowDefinition>
@@ -71,50 +75,81 @@
                     <TextBlock Grid.Row="0" Grid.Column="0">Enable mouse control</TextBlock>
                     <Button Grid.Row="0" Grid.Column="1" Click="KeyBindingButtonClick" Name="EnableMouseControll">error</Button>
                     <Button Grid.Row="0" Grid.Column="2" Click="KeyBindingButtonClick" Name="EnableMouseControllDefault">Default</Button>
+                    <Button Grid.Row="0" Grid.Column="3" Click="KeyBindingButtonClick" Name="EnableMouseControllUnset" Margin="0 0 20 0">Unset</Button>
+
 
                     <TextBlock Grid.Row="1" Grid.Column="0">Left mouse button</TextBlock>
                     <Button Grid.Row="1" Grid.Column="1" Click="KeyBindingButtonClick" Name="LeftMouseButton">error</Button>
                     <Button Grid.Row="1" Grid.Column="2" Click="KeyBindingButtonClick" Name="LeftMouseButtonDefault">Default</Button>
+                    <Button Grid.Row="1" Grid.Column="3" Click="KeyBindingButtonClick" Name="LeftMouseButtonUnset" Margin="0 0 20 0">Unset</Button>
+
 
                     <TextBlock Grid.Row="2" Grid.Column="0">Right mouse button</TextBlock>
                     <Button Grid.Row="2" Grid.Column="1" Click="KeyBindingButtonClick" Name="RightMouseButton">error</Button>
                     <Button Grid.Row="2" Grid.Column="2" Click="KeyBindingButtonClick" Name="RightMouseButtonDefault">Default</Button>
+                    <Button Grid.Row="2" Grid.Column="3" Click="KeyBindingButtonClick" Name="RightMouseButtonUnset" Margin="0 0 20 0">Unset</Button>
+
 
                     <TextBlock Grid.Row="3" Grid.Column="0">Scroll down</TextBlock>
                     <Button Grid.Row="3" Grid.Column="1" Click="KeyBindingButtonClick" Name="ScrollDown">error</Button>
                     <Button Grid.Row="3" Grid.Column="2" Click="KeyBindingButtonClick" Name="ScrollDownDefault">Default</Button>
+                    <Button Grid.Row="3" Grid.Column="3" Click="KeyBindingButtonClick" Name="ScrollDownUnset" Margin="0 0 20 0">Unset</Button>
+
 
                     <TextBlock Grid.Row="4" Grid.Column="0">Scroll up</TextBlock>
                     <Button Grid.Row="4" Grid.Column="1" Click="KeyBindingButtonClick" Name="ScrollUp">error</Button>
                     <Button Grid.Row="4" Grid.Column="2" Click="KeyBindingButtonClick" Name="ScrollUpDefault">Default</Button>
+                    <Button Grid.Row="4" Grid.Column="3" Click="KeyBindingButtonClick" Name="ScrollUpUnset" Margin="0 0 20 0">Unset</Button>
+
 
                     <TextBlock Grid.Row="5" Grid.Column="0">Scroll left</TextBlock>
                     <Button Grid.Row="5" Grid.Column="1" Click="KeyBindingButtonClick" Name="ScrollLeft">error</Button>
                     <Button Grid.Row="5" Grid.Column="2" Click="KeyBindingButtonClick" Name="ScrollLeftDefault">Default</Button>
+                    <Button Grid.Row="5" Grid.Column="3" Click="KeyBindingButtonClick" Name="ScrollLeftUnset" Margin="0 0 20 0">Unset</Button>
+
 
                     <TextBlock Grid.Row="6" Grid.Column="0">Scroll right</TextBlock>
                     <Button Grid.Row="6" Grid.Column="1" Click="KeyBindingButtonClick" Name="ScrollRight">error</Button>
                     <Button Grid.Row="6" Grid.Column="2" Click="KeyBindingButtonClick" Name="ScrollRightDefault">Default</Button>
+                    <Button Grid.Row="6" Grid.Column="3" Click="KeyBindingButtonClick" Name="ScrollRightUnset" Margin="0 0 20 0">Unset</Button>
+
 
                     <TextBlock Grid.Row="7" Grid.Column="0">Calibrate up</TextBlock>
                     <Button Grid.Row="7" Grid.Column="1" Click="KeyBindingButtonClick" Name="CalibrateUp">error</Button>
                     <Button Grid.Row="7" Grid.Column="2" Click="KeyBindingButtonClick" Name="CalibrateUpDefault">Default</Button>
+                    <Button Grid.Row="7" Grid.Column="3" Click="KeyBindingButtonClick" Name="CalibrateUpUnset" Margin="0 0 20 0">Unset</Button>
+
 
                     <TextBlock Grid.Row="8" Grid.Column="0">Calibrate down</TextBlock>
                     <Button Grid.Row="8" Grid.Column="1" Click="KeyBindingButtonClick" Name="CalibrateDown">error</Button>
                     <Button Grid.Row="8" Grid.Column="2" Click="KeyBindingButtonClick" Name="CalibrateDownDefault">Default</Button>
+                    <Button Grid.Row="8" Grid.Column="3" Click="KeyBindingButtonClick" Name="CalibrateDownUnset" Margin="0 0 20 0">Unset</Button>
+
 
                     <TextBlock Grid.Row="9" Grid.Column="0">Calibrate left</TextBlock>
                     <Button Grid.Row="9" Grid.Column="1" Click="KeyBindingButtonClick" Name="CalibrateLeft">error</Button>
                     <Button Grid.Row="9" Grid.Column="2" Click="KeyBindingButtonClick" Name="CalibrateLeftDefault">Default</Button>
+                    <Button Grid.Row="9" Grid.Column="3" Click="KeyBindingButtonClick" Name="CalibrateLeftUnset" Margin="0 0 20 0">Unset</Button>
 
                     <TextBlock Grid.Row="10" Grid.Column="0">Calibrate right</TextBlock>
                     <Button Grid.Row="10" Grid.Column="1" Click="KeyBindingButtonClick" Name="CalibrateRigth">error</Button>
                     <Button Grid.Row="10" Grid.Column="2" Click="KeyBindingButtonClick" Name="CalibrateRigthDefault">Default</Button>
+                    <Button Grid.Row="10" Grid.Column="3" Click="KeyBindingButtonClick" Name="CalibrateRigthUnset" Margin="0 0 20 0">Unset</Button>
 
-                    <TextBlock Grid.Row="11" Grid.Column="0">Calibration view</TextBlock>
-                    <Button Grid.Row="11" Grid.Column="1" Click="KeyBindingButtonClick" Name="CalibrationView">error</Button>
-                    <Button Grid.Row="11" Grid.Column="2" Click="KeyBindingButtonClick" Name="CalibrationViewDefault">Default</Button>
+                    <TextBlock Grid.Row="11" Grid.Column="0">Stop Controlling</TextBlock>
+                    <Button Grid.Row="11" Grid.Column="1" Click="KeyBindingButtonClick" Name="StopCalibration">error</Button>
+                    <Button Grid.Row="11" Grid.Column="2" Click="KeyBindingButtonClick" Name="StopCalibrationDefault">Default</Button>
+                    <Button Grid.Row="11" Grid.Column="3" Click="KeyBindingButtonClick" Name="StopCalibrationUnset" Margin="0 0 20 0">Unset</Button>
+
+                    <TextBlock Grid.Row="12" Grid.Column="0" Visibility="{Binding IsChecked,ElementName=CheckboxAccessibility,Converter={StaticResource BooleanToVisibilityConverter}}" >Save Calibration</TextBlock>
+                    <Button Grid.Row="12" Grid.Column="1" Click="KeyBindingButtonClick" Name="Accessibility_SaveCalibration" Visibility="{Binding IsChecked,ElementName=CheckboxAccessibility,Converter={StaticResource BooleanToVisibilityConverter}}">error</Button>
+                    <Button Grid.Row="12" Grid.Column="2" Click="KeyBindingButtonClick" Name="Accessibility_SaveCalibrationDefault" Visibility="{Binding IsChecked,ElementName=CheckboxAccessibility,Converter={StaticResource BooleanToVisibilityConverter}}">Default</Button>
+                    <Button Grid.Row="12" Grid.Column="3" Click="KeyBindingButtonClick" Name="Accessibility_SaveCalibrationUnset" Visibility="{Binding IsChecked,ElementName=CheckboxAccessibility,Converter={StaticResource BooleanToVisibilityConverter}}" Margin="0 0 20 0">Unset</Button>
+
+                    <TextBlock Grid.Row="13" Grid.Column="0">Calibration view</TextBlock>
+                    <Button Grid.Row="13" Grid.Column="1" Click="KeyBindingButtonClick" Name="CalibrationView">error</Button>
+                    <Button Grid.Row="13" Grid.Column="2" Click="KeyBindingButtonClick" Name="CalibrationViewDefault">Default</Button>
+                    <Button Grid.Row="13" Grid.Column="3" Click="KeyBindingButtonClick" Name="CalibrationViewUnset" Margin="0 0 20 0">Unset</Button>
 
                     <Button Grid.Row="0" Grid.Column="4" Click="ResetEverything_Click" Name="ResetEverything" >Reset all bindings to defaults</Button>
                     <TextBlock Grid.Row="2" Grid.Column="4">Key interception backend:</TextBlock>
