hide options irrelevant to Accessibility Mode

--- a/eye_tracking_mouse/ui/IntegerPropertyControl.xaml
+++ b/eye_tracking_mouse/ui/IntegerPropertyControl.xaml
@@ -5,8 +5,8 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:eye_tracking_mouse"
              mc:Ignorable="d" 
-             d:DesignHeight="20" d:DesignWidth="500">
-    <Grid Name="Grid">
+             d:DesignHeight="24" d:DesignWidth="500">
+    <Grid Name="Grid" Margin="0 2 0 2">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="200"/>
             <ColumnDefinition Width="250"/>
